--- a/LAMANSYS/FE/E1-todo-list/src/index.html
+++ b/LAMANSYS/FE/E1-todo-list/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>E1TodoList</title>
-  <base href="https://ninaencinosa.github.io/DEV/LAMANSYS/FE/E1-todo-list/src/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
